--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "lint-staged": "^14.0.1",
     "prettier": "^3.2.5",
     "typescript": "^5.3.3",
-    "vitest": "^1.3.1"
+    "vitest": "^1.3.1",
+    "tsx": "^4.6.2",
+    "prisma": "^5.16.1"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
@@ -36,5 +38,11 @@
     "*.{json,md}": [
       "prettier --write"
     ]
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
+  "dependencies": {
+    "@prisma/client": "^5.16.1"
   }
 }
