--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,8 @@
     "noEmit": true,
     "baseUrl": ".",
     "jsx": "react-jsx",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
     "paths": {
       "@nulladata/ui": ["packages/ui/src"],
       "@nulladata/config": ["packages/config/src"]
