--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ SMTP_HOST=localhost
 SMTP_PORT=1025
 SMTP_USER=
 SMTP_PASS=
+SMTP_FROM=no-reply@localhost
 NEXTAUTH_SECRET=changeme
 NEXTAUTH_URL=http://localhost:3000
 APP_BASE_URL=http://localhost:3000
