--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -3,5 +3,8 @@
   "version": "0.1.0",
   "main": "src/index.ts",
   "types": "src/index.ts",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "zod": "^4.0.17"
+  }
 }
