--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ DATABASE_URL=postgresql://postgres:postgres@localhost:5432/nulladata
 REDIS_URL=redis://localhost:6379
 MEILI_HOST=http://localhost:7700
 MEILI_API_KEY=dev_key
+# MailHog SMTP host
 SMTP_HOST=localhost
 SMTP_PORT=1025
 SMTP_USER=
