feat: add marketing landing page

--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -2,6 +2,5 @@
   "name": "@nulladata/config",
   "version": "0.1.0",
   "main": "src/index.ts",
-  "types": "src/index.ts",
-
+  "types": "src/index.ts"
 }
