--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "@nulladata/config": "workspace:*",
     "@nulladata/ui": "workspace:*",
-n
     "bullmq": "^4.13.0",
     "ioredis": "^5.3.2",
     "next": "^14.1.0",
@@ -20,7 +19,8 @@ n
     "react-dom": "^18.2.0",
     "nodemailer": "^6.9.8",
     "pdfkit": "^0.13.0",
-
+    "framer-motion": "^12.3.0",
+    "lucide-react": "^0.446.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
