--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "prepare": "husky install"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "@types/node": "^20.5.0",
     "@types/nodemailer": "^7.0.0",
     "@types/pdfkit": "^0.17.2",
@@ -23,12 +25,13 @@
     "eslint-config-next": "^14.0.0",
     "eslint-config-prettier": "^9.1.0",
     "husky": "^9.0.10",
+    "jsdom": "^26.1.0",
     "lint-staged": "^14.0.1",
     "prettier": "^3.2.5",
-    "typescript": "^5.3.3",
-    "vitest": "^1.3.1",
+    "prisma": "^5.16.1",
     "tsx": "^4.6.2",
-    "prisma": "^5.16.1"
+    "typescript": "^5.3.3",
+    "vitest": "^1.3.1"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
