--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,15 +12,20 @@
   "dependencies": {
     "@nulladata/config": "workspace:*",
     "@nulladata/ui": "workspace:*",
-n
     "bullmq": "^4.13.0",
     "ioredis": "^5.3.2",
     "next": "^14.1.0",
+    "next-auth": "^4.24.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "nodemailer": "^6.9.8",
     "pdfkit": "^0.13.0",
-
+    "framer-motion": "^12.3.0",
+    "lucide-react": "^0.446.0",
+    "got": "^14.4.1",
+    "cheerio": "^1.0.0-rc.12",
+    "robots-parser": "^3.0.0",
+    "p-limit": "^4.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
