--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,18 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "ESNext",
+    "module": "NodeNext",
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "allowJs": false,
     "skipLibCheck": true,
-    "moduleResolution": "Node",
+    "moduleResolution": "NodeNext",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "baseUrl": ".",
-    "jsx": "react-jsx",
-    }
+    "jsx": "react-jsx"
   },
   "include": ["packages", "apps", "types", "vitest.config.ts", "prisma"],
   "exclude": ["node_modules"]
