--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,19 +12,30 @@
   "dependencies": {
     "@nulladata/config": "workspace:*",
     "@nulladata/ui": "workspace:*",
-n
     "bullmq": "^4.13.0",
     "ioredis": "^5.3.2",
     "next": "^14.1.0",
+    "next-auth": "^4.24.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "nodemailer": "^6.9.8",
     "pdfkit": "^0.13.0",
-
+    "handlebars": "^4.7.8",
+    "markdown-it": "^14.1.0",
+    "zod": "^3.23.8",
+    "dayjs": "^1.11.13",
+    "uuid": "^9.0.1",
+    "framer-motion": "^12.3.0",
+    "lucide-react": "^0.446.0",
+    "got": "^14.4.1",
+    "cheerio": "^1.0.0-rc.12",
+    "robots-parser": "^3.0.0",
+    "p-limit": "^4.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5"
+    "tailwindcss": "^3.3.5",
+    "@types/markdown-it": "^14.0.1"
   }
 }
