--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "ESNext",
+    "module": "NodeNext",
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "allowJs": false,
     "skipLibCheck": true,
-    "moduleResolution": "Node",
+    "moduleResolution": "NodeNext",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "strict": true,
@@ -13,6 +13,8 @@
     "noEmit": true,
     "baseUrl": ".",
     "jsx": "react-jsx",
+    "paths": {
+      "@/*": ["./apps/web/*"]
     }
   },
   "include": ["packages", "apps", "types", "vitest.config.ts", "prisma"],
