--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^20.5.0",
     "@types/nodemailer": "^7.0.0",
     "@types/pdfkit": "^0.17.2",
+    "@types/markdown-it": "^14.0.1",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
@@ -46,6 +47,15 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
-    "@prisma/client": "^5.16.1"
+    "@prisma/client": "^5.16.1",
+    "bullmq": "^5.7.8",
+    "dayjs": "^1.11.11",
+    "handlebars": "^4.7.8",
+    "ioredis": "^5.4.1",
+    "markdown-it": "^14.0.0",
+    "nodemailer": "^6.9.11",
+    "pdfkit": "^0.15.0",
+    "uuid": "^9.0.1",
+    "zod": "^3.23.8"
   }
 }
