docs: note Request model in DSAR section

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,9 @@
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "baseUrl": ".",
+    "paths": {
+      "@/*": ["apps/web/*"]
+    },
     "jsx": "react-jsx"
   },
   "include": ["packages", "apps", "types", "vitest.config.ts", "prisma"],
